generator/org/pshdl/model/types/builtIn/busses/memorymodel/v4/MemoryModelParser.java
/*******************************************************************************
 * PSHDL is a library and (trans-)compiler for PSHDL input. It generates
 *     output suitable for implementation or simulation of it.
 *
 *     Copyright (C) 2013 Karsten Becker (feedback (at) pshdl (dot) org)
 *
 *     This program is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     This program is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 *     This License does not grant permission to use the trade names, trademarks,
 *     service marks, or product names of the Licensor, except as required for
 *     reasonable and customary use in describing the origin of the Work.
 *
 * Contributors:
 *     Karsten Becker - initial API and implementation
 ******************************************************************************/
// Generated from MemoryModel.g4 by ANTLR 4.7
package org.pshdl.model.types.builtIn.busses.memorymodel.v4;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class MemoryModelParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14,
			T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24, T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28,
			T__28 = 29, ID = 30, NUMBER = 31, COMMENT = 32, WS = 33;
	public static final int RULE_unit = 0, RULE_declaration = 1, RULE_row = 2, RULE_rowID = 3, RULE_constant = 4, RULE_filling = 5, RULE_column = 6, RULE_alias = 7,
			RULE_memory = 8, RULE_definition = 9, RULE_warnType = 10, RULE_rwStatus = 11, RULE_width = 12, RULE_type = 13, RULE_reference = 14;
	public static final String[] ruleNames = { "unit", "declaration", "row", "rowID", "constant", "filling", "column", "alias", "memory", "definition", "warnType", "rwStatus",
			"width", "type", "reference" };

	private static final String[] _LITERAL_NAMES = { null, "'row'", "'{'", "'}'", "'^'", "'const'", "'<'", "'>'", "'$date'", "'$time'", "'$checkSum'", "';'", "'fill'", "'column'",
			"'alias'", "'memory'", "'register'", "'['", "']'", "'writtenFlag'", "'silent'", "'mask'", "'error'", "'limit'", "'r'", "'w'", "'rw'", "'int'", "'uint'", "'bit'" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, "ID", "NUMBER", "COMMENT", "WS" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "MemoryModel.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public MemoryModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class UnitContext extends ParserRuleContext {
		public MemoryContext memory() {
			return getRuleContext(MemoryContext.class, 0);
		}

		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}

		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class, i);
		}

		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_unit;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterUnit(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitUnit(this);
			}
		}
	}

	public final UnitContext unit() throws RecognitionException {
		final UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__0) | (1L << T__12) | (1L << T__13))) != 0))) {
					{
						{
							setState(30);
							declaration();
						}
					}
					setState(35);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				{
					setState(36);
					memory();
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public RowContext row() {
			return getRuleContext(RowContext.class, 0);
		}

		public ColumnContext column() {
			return getRuleContext(ColumnContext.class, 0);
		}

		public AliasContext alias() {
			return getRuleContext(AliasContext.class, 0);
		}

		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_declaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterDeclaration(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitDeclaration(this);
			}
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		final DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(41);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0: {
					{
						setState(38);
						row();
					}
				}
					break;
				case T__12: {
					{
						setState(39);
						column();
					}
				}
					break;
				case T__13: {
					{
						setState(40);
						alias();
					}
				}
					break;
				default:
					throw new NoViableAltException(this);
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public RowIDContext rowID() {
			return getRuleContext(RowIDContext.class, 0);
		}

		public List<FillingContext> filling() {
			return getRuleContexts(FillingContext.class);
		}

		public FillingContext filling(int i) {
			return getRuleContext(FillingContext.class, i);
		}

		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}

		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class, i);
		}

		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}

		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class, i);
		}

		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}

		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class, i);
		}

		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_row;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterRow(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitRow(this);
			}
		}
	}

	public final RowContext row() throws RecognitionException {
		final RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(43);
				match(T__0);
				setState(44);
				rowID();
				setState(45);
				match(T__1);
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__4) | (1L << T__11) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << ID))) != 0))) {
					{
						setState(50);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case T__11: {
							{
								setState(46);
								filling();
							}
						}
							break;
						case T__23:
						case T__24:
						case T__25: {
							{
								setState(47);
								definition();
							}
						}
							break;
						case ID: {
							{
								setState(48);
								reference();
							}
						}
							break;
						case T__4: {
							{
								setState(49);
								constant();
							}
						}
							break;
						default:
							throw new NoViableAltException(this);
						}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(55);
				match(T__2);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowIDContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(MemoryModelParser.ID, 0);
		}

		public RowIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_rowID;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterRowID(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitRowID(this);
			}
		}
	}

	public final RowIDContext rowID() throws RecognitionException {
		final RowIDContext _localctx = new RowIDContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rowID);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__3) {
					{
						setState(57);
						match(T__3);
					}
				}

				setState(60);
				match(ID);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Token value;

		public TerminalNode NUMBER() {
			return getToken(MemoryModelParser.NUMBER, 0);
		}

		public WidthContext width() {
			return getRuleContext(WidthContext.class, 0);
		}

		public TerminalNode ID() {
			return getToken(MemoryModelParser.ID, 0);
		}

		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_constant;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterConstant(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitConstant(this);
			}
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		final ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(62);
				match(T__4);
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__5) {
					{
						setState(63);
						match(T__5);
						setState(64);
						width();
						setState(65);
						match(T__6);
					}
				}

				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == ID) {
					{
						setState(69);
						match(ID);
					}
				}

				setState(72);
				_localctx.value = _input.LT(1);
				_la = _input.LA(1);
				if (!(((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << NUMBER))) != 0)))) {
					_localctx.value = _errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
					_errHandler.reportMatch(this);
					consume();
				}
				setState(73);
				match(T__10);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FillingContext extends ParserRuleContext {
		public WidthContext width() {
			return getRuleContext(WidthContext.class, 0);
		}

		public FillingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_filling;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterFilling(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitFilling(this);
			}
		}
	}

	public final FillingContext filling() throws RecognitionException {
		final FillingContext _localctx = new FillingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filling);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(75);
				match(T__11);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__5) {
					{
						setState(76);
						match(T__5);
						setState(77);
						width();
						setState(78);
						match(T__6);
					}
				}

				setState(82);
				match(T__10);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(MemoryModelParser.ID, 0);
		}

		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}

		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class, i);
		}

		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}

		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class, i);
		}

		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_column;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterColumn(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitColumn(this);
			}
		}
	}

	public final ColumnContext column() throws RecognitionException {
		final ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_column);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(84);
				match(T__12);
				setState(85);
				match(ID);
				setState(86);
				match(T__1);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((_la == T__4) || (_la == ID)) {
					{
						setState(89);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case ID: {
							{
								setState(87);
								reference();
							}
						}
							break;
						case T__4: {
							{
								setState(88);
								constant();
							}
						}
							break;
						default:
							throw new NoViableAltException(this);
						}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(94);
				match(T__2);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(MemoryModelParser.ID, 0);
		}

		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}

		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class, i);
		}

		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}

		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class, i);
		}

		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_alias;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterAlias(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitAlias(this);
			}
		}
	}

	public final AliasContext alias() throws RecognitionException {
		final AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(96);
				match(T__13);
				setState(97);
				match(ID);
				setState(98);
				match(T__1);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << ID))) != 0))) {
					{
						setState(101);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case T__23:
						case T__24:
						case T__25: {
							{
								setState(99);
								definition();
							}
						}
							break;
						case ID: {
							{
								setState(100);
								reference();
							}
						}
							break;
						default:
							throw new NoViableAltException(this);
						}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(106);
				match(T__2);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemoryContext extends ParserRuleContext {
		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}

		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class, i);
		}

		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}

		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class, i);
		}

		public MemoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_memory;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterMemory(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitMemory(this);
			}
		}
	}

	public final MemoryContext memory() throws RecognitionException {
		final MemoryContext _localctx = new MemoryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_memory);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				match(T__14);
				setState(109);
				match(T__1);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((_la == T__4) || (_la == ID)) {
					{
						setState(112);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case ID: {
							{
								setState(110);
								reference();
							}
						}
							break;
						case T__4: {
							{
								setState(111);
								constant();
							}
						}
							break;
						default:
							throw new NoViableAltException(this);
						}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(T__2);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Token hasRegister;
		public Token modFlag;

		public RwStatusContext rwStatus() {
			return getRuleContext(RwStatusContext.class, 0);
		}

		public TypeContext type() {
			return getRuleContext(TypeContext.class, 0);
		}

		public TerminalNode ID() {
			return getToken(MemoryModelParser.ID, 0);
		}

		public WidthContext width() {
			return getRuleContext(WidthContext.class, 0);
		}

		public List<TerminalNode> NUMBER() {
			return getTokens(MemoryModelParser.NUMBER);
		}

		public TerminalNode NUMBER(int i) {
			return getToken(MemoryModelParser.NUMBER, i);
		}

		public WarnTypeContext warnType() {
			return getRuleContext(WarnTypeContext.class, 0);
		}

		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_definition;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterDefinition(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitDefinition(this);
			}
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		final DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(119);
				rwStatus();
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__15) {
					{
						setState(120);
						_localctx.hasRegister = match(T__15);
					}
				}

				setState(123);
				type();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__5) {
					{
						setState(124);
						match(T__5);
						setState(125);
						width();
						setState(126);
						match(T__6);
					}
				}

				setState(130);
				match(ID);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == T__16) {
					{
						{
							setState(131);
							match(T__16);
							setState(132);
							match(NUMBER);
							setState(133);
							match(T__17);
						}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22))) != 0))) {
					{
						setState(139);
						warnType();
					}
				}

				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__18) {
					{
						setState(142);
						_localctx.modFlag = match(T__18);
					}
				}

				setState(145);
				match(T__10);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WarnTypeContext extends ParserRuleContext {
		public Token silent;
		public Token typeString;

		public WarnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_warnType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterWarnType(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitWarnType(this);
			}
		}
	}

	public final WarnTypeContext warnType() throws RecognitionException {
		final WarnTypeContext _localctx = new WarnTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_warnType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__19) {
					{
						setState(147);
						_localctx.silent = match(T__19);
					}
				}

				setState(150);
				_localctx.typeString = _input.LT(1);
				_la = _input.LA(1);
				if (!(((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22))) != 0)))) {
					_localctx.typeString = _errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RwStatusContext extends ParserRuleContext {
		public RwStatusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_rwStatus;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterRwStatus(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitRwStatus(this);
			}
		}
	}

	public final RwStatusContext rwStatus() throws RecognitionException {
		final RwStatusContext _localctx = new RwStatusContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rwStatus);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(152);
				_la = _input.LA(1);
				if (!(((((_la) & ~0x3f) == 0) && (((1L << _la) & ((1L << T__23) | (1L << T__24) | (1L << T__25))) != 0)))) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF) {
						matchedEOF = true;
					}
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthContext extends ParserRuleContext {
		public TerminalNode NUMBER() {
			return getToken(MemoryModelParser.NUMBER, 0);
		}

		public WidthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_width;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterWidth(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).exitWidth(this);
			}
		}
	}

	public final WidthContext width() throws RecognitionException {
		final WidthContext _localctx = new WidthContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_width);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(154);
				match(NUMBER);
			}
		} catch (final RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_type;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MemoryModelListener) {
				((MemoryModelListener) listener).enterType(this);
			}
		}
